--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app" />
@@ -26,7 +26,7 @@
             href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap"
             rel="stylesheet"
         />
-        <title>React App</title>
+        <title>Ledger</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
